fix: remove elements overlap

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,7 +8,7 @@
   height: 3rem;
   padding: 7px 1rem;
   background-color: var(--PAGE-BG);
-  z-index: 1;
+  z-index: 4;
 }
 
 .main-logo {
