--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -50,6 +50,7 @@ html {
   width: 15rem;
   margin: 8px;
   min-height: 13.5rem;
+  height: 16.15rem;
   border-radius: 1rem;
 }
 
